--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Flask==2.3.3
 gunicorn==20.1.0
 textblob==0.17.1
 python-docx==0.8.11
-openai==0.27.0
+openai==0.28.0
 python-dotenv==0.21.0
+gunicorn==20.1.0
